# HUFF

./: .gitignore  README.md  build.sh  hff.py  test.py
chrome-extension/: manifest.json
chrome-extension/src/: background.js  content.js  module_content.js  options.html  options.js  styles.css
hff-rs/: Cargo.toml  package-lock.json  package.json
hff-rs/examples/: json_to_hff.rs
hff-rs/lib/: Cargo.toml
hff-rs/resources/: mapping.hfc
hff-rs/src/: hff.rs  lib.rs  main.rs  wasm.rs
hff-rs/src/hff/: mapping.rs  mod.rs  reformatting.rs
hff-rs/wasm/: Cargo.toml
