[package]
name = "hff-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.80"
serde_yaml = "0.9.31"
wasm-bindgen = "0.2"
#reqwest = { version = "0.11.24", features = ["json"] } # reqwest with JSON parsing support
#tokio = { version = "1.36.0", features = ["full"] } # for our async runtime  

[lib]
path = "src/hff.rs"
crate-type = ["cdylib"]
