[package]
name = "hff-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonpath_lib = "0.3.0"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.80"
serde_yaml = "0.9.31"
wasm-bindgen = "0.2"

[lib]
path = "../src/wasm.rs"
crate-type = ["cdylib"]
